workspace_dc2/postgresql/templates/ingress.yaml
# postgresql Ingress
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: postgresql-ingress
  labels:
    name: postgresql-ingress
  annotations: 
     ingress.kubernetes.io/rewrite-target: /
     kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: postgresql.big-data2.safaricomet.net
    http:
      paths:
      - path: /
        backend:
            serviceName: bigdata-psql-postgresql-headless
            servicePort: 5432
        pathType: ImplementationSpecific
